--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@ body {
 @tailwind utilities;
 
 .divider {
-  @apply my-2 mx-auto w-[60%] h-[2px] bg-black text-center relative after:content-[""] after:absolute after:h-5 after:w-5 after:border-4 after:border-white after:rounded-full after:left-[50%] after:top-[50%] after:-translate-x-1/2 after:-translate-y-1/2  after:bg-black;
+  @apply my-2 mx-auto w-[60%] h-[2px] hidden lg:block bg-black text-center relative after:content-[""] after:absolute after:h-5 after:w-5 after:border-4 after:border-white after:rounded-full after:left-[50%] after:top-[50%] after:-translate-x-1/2 after:-translate-y-1/2  after:bg-black;
 }
 .link {
-  @apply flex my-1 justify-start flex-row gap-3  p-2   w-full rounded-lg text-[1.1rem] font-normal hover:font-bold hover:bg-shadow-gray transition-all;
+  @apply flex my-1 justify-center lg:justify-start flex-row gap-3  p-2   w-full rounded-lg text-[1.1rem] font-normal hover:font-bold hover:bg-shadow-gray transition-all;
 }
 .active {
   @apply bg-shadow-gray;
@@ -30,5 +30,5 @@ section {
   @apply px-4;
 }
 .dashboard article {
-  @apply col-span-4 row-span-1 h-[100%] rounded-xl overflow-hidden bg-white;
+  @apply lg:col-span-4 sm:col-span-6 col-span-12 row-span-1 h-[100%] rounded-xl overflow-hidden bg-white;
 }
