--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,9 @@ section {
 .dashboard article {
   @apply lg:col-span-4 sm:col-span-6 col-span-12 row-span-1 h-[100%] rounded-xl overflow-hidden bg-white;
 }
+/* .progress::after {
+  content: "lksjd";
+  position: absolute;
+  width: 20px;
+  height: 30px;
+} */
