--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
   padding: 0;
   user-select: none;
 }
+html {
+  color: black !important;
+}
 body {
   font-family: "Roboto", "Open Sans";
   font-weight: 100;
